syntax = "proto3";
option java_multiple_files = true;
package com.ubb.pcis2083.soa.articles;
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";


message Article {
    int64 id = 1;
    string title = 2;
    string text = 3;
    int64 labelId = 4;
}

message ArticleResponse {
    repeated int64 articles = 1;
}

service ArticleService {
    rpc getAll(google.protobuf.Empty) returns (ArticleResponse);
    rpc getById(google.protobuf.Int64Value) returns (Article);

    rpc save(Article) returns (google.protobuf.Int64Value);
    rpc update(Article) returns (google.protobuf.BoolValue);
    rpc deleteById(google.protobuf.Int64Value) returns (google.protobuf.BoolValue);
}
